// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paginator should render a default paginator button 1`] = `
<PaginatorButton
  id="test-button"
>
  <button
    className=""
    onBlur={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    type="button"
  />
</PaginatorButton>
`;

exports[`Paginator should render a passed in child 1`] = `
<button
  className=""
  onBlur={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  type="button"
>
  <span>
    test
  </span>
</button>
`;
